--- a/src/Hjmos.BaseControls/Themes/Basic/Converters.xaml
+++ b/src/Hjmos.BaseControls/Themes/Basic/Converters.xaml
@@ -19,4 +19,5 @@
     <converter:Object2StringConverter x:Key="Object2StringConverter"/>
     <converter:Name2ImageSourceConverter  x:Key="Name2ImageSourceConverter"/>
     <converter:String2GeometryConverter x:Key="String2GeometryConverter"/>
+    <converter:RectangleCircularConverter x:Key="RectangleCircularConverter"/>
 </ResourceDictionary>
