--- a/Tests/Controltest/Window2.xaml
+++ b/Tests/Controltest/Window2.xaml
@@ -1,27 +1,26 @@
-﻿<Window x:Class="Controltest.Window2"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Controltest" xmlns:cefSharp="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf" xmlns:controls="clr-namespace:Hjmos.CustomCharts.Controls;assembly=Hjmos.CustomCharts" xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
+        xmlns:local="clr-namespace:Controltest" xmlns:cefSharp="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf" xmlns:controls="clr-namespace:Hjmos.CustomCharts.Controls;assembly=Hjmos.CustomCharts" xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"     
+        xmlns:hj="clr-namespace:Hjmos.BaseControls.Controls;assembly=Hjmos.BaseControls" xmlns:hjcc="clr-namespace:Hjmos.CommonControls.Controls;assembly=Hjmos.CommonControls"  x:Class="Controltest.Window2"
         mc:Ignorable="d"     
-        xmlns:hj="clr-namespace:Hjmos.BaseControls.Controls;assembly=Hjmos.BaseControls" xmlns:hjcc="clr-namespace:Hjmos.CommonControls.Controls;assembly=Hjmos.CommonControls" d:DataContext="{d:DesignInstance Type=local:Window2}"
-        Title="Window2" Height="800" Width="1000">
+        d:DataContext="{d:DesignInstance Type={x:Type local:Window2}}"
+        Title="Window2" Height="800" Width="1000"  >
     <Grid >
         <!--<basechartcontrols:CartesianChart x:Name="cefsharp" Address="file:///D:/A日常编程练习/Echarts/dynamic-data2"></basechartcontrols:CartesianChart>-->
         <!--<cefSharp:ChromiumWebBrowser x:Name="cefsharp1" Address="file:///D:/A日常编程练习/Echarts/dynamic-data2.html"  ></cefSharp:ChromiumWebBrowser>
         <Button Content="Button" HorizontalAlignment="Left" Margin="645,380,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>-->
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="75*"/>
+            <RowDefinition Height="430*"/>
             <!--<RowDefinition Height="3"/>-->
-            <RowDefinition Height="182*"/>
+            <RowDefinition Height="341*"/>
         </Grid.RowDefinitions>
         <!--<hj:ImageViewer ImageSource="pack://application:,,,/Hjmos.BaseControls;component/Resources/Image/水滴.svg"  Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,25,158.333,4.667" />-->
 
-        <Button Style="{StaticResource ButtonIcon}" hj:IconElement.Geometry="{StaticResource Message}"  BorderBrush="#13FF9B" Foreground="#005A08"  Grid.Row="0" VerticalAlignment="Center" Height="45" Width="85" HorizontalAlignment="Right" Margin="0,70,168.333,109.667">
-           
-        </Button>
+        <Button Style="{StaticResource ButtonIcon}"   hj:IconElement.Geometry="{StaticResource Message}"  BorderBrush="#13FF9B" Foreground="#005A08"  Grid.Row="0" VerticalAlignment="Center" Height="45" Width="85" HorizontalAlignment="Right" Margin="0,169,168.333,216"/>
         <!--<GridSplitter Grid.Row="1" Grid.RowSpan="2" Background="Red" Height="3" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>-->
         <!--<hjcc:TrainCongestionStatus Grid.Row="2"   TrainCongestionDatas="{Binding TrainCongestionDatas}"/>-->
         <!--<controls:BigDataMonitor TotalQuanity="123456787" Grid.Row="1" BigDataList="{Binding bigDataItemModels}" Grid.RowSpan="2" Style="{StaticResource BigDataMonitorBaseStyle}"/>-->
@@ -36,13 +35,14 @@
 
         <!--<Button Content="Button" HorizontalAlignment="Left" Margin="95,36,0,0" Grid.Row="0" VerticalAlignment="Top" Width="75" Click="Button_Click_2"/>-->
         <!--<TextBlock  Grid.Row="0" Text="{Binding valuetext,StringFormat=共{0:N0}页}" FontSize="30" Foreground="Red"/>-->
-        <!--<ComboBox ItemsSource="{Binding MaxPageRange}" SelectedIndex="0" ItemStringFormat="'{}{0} in}'"  Grid.Row="0" Margin="0,0,643.333,130"  Foreground="Red"/>-->
+        <hj:MemoBox  Style="{StaticResource ComboBoxMemoExtentStyle}" hj:InfoElement.ContentHeight="30"  hj:InfoElement.Title="事件类型" MemoText="{Binding MaxPageRange}" SelectedIndex="0" BorderBrush="Red" hj:BorderElement.Geometry="{StaticResource Rect2}"  Grid.Row="0"    Foreground="Red" Margin="95,85,458.333,230"/>
+
         <!--<controls:AverageDailyPassengerFlowTop10 FlowDatas="{Binding Datas}"  Style="{StaticResource AverageDailyPassengerFlowTop10}"  Grid.Row="1" Margin="0,0,318.333,-0.333"/>-->
         <!--<hj:Pagination Grid.Row="0" MaxNum="203" PageUpdated="Pagination_PageUpdated" MaxPageInterval="4"  Margin="120,45,68.333,40"/>-->
         <Button Content="预警信息" Grid.Row="0" HorizontalAlignment="Left" Style="{StaticResource ButtonBorder}" hj:BorderElement.Geometry="{StaticResource Border1}" Background="Transparent" hj:IconElement.Geometry="{StaticResource AlarmGeometry}" hj:IconElement.Height="20"   VerticalAlignment="Top" Width="105" Click="Button_Click_3" Height="30"/>
 
 
-        <ItemsControl Margin="250,35,376.333,24.667" VerticalAlignment="Center" Grid.Row="0" Height="165" ItemsSource="{Binding SolveProcessDatas}">
+        <!--<ItemsControl Margin="250,134,376.333,131" VerticalAlignment="Center" Grid.Row="0" Height="165" ItemsSource="{Binding SolveProcessDatas}">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
                     <Expander Header="{Binding Title}" HorizontalContentAlignment="Center">
@@ -55,9 +55,9 @@
                         </ItemsControl>
                     </Expander>
                 </DataTemplate>
-            </ItemsControl.ItemTemplate>
+            </ItemsControl.ItemTemplate>-->
 
-            <!--<Expander Margin="0,4,0,0" Header="获取突发事件情况" HorizontalContentAlignment="Center" >
+        <!--<Expander Margin="0,4,0,0" Header="获取突发事件情况" HorizontalContentAlignment="Center" >
                 <Border Height="10" BorderThickness="1,0,1,1" BorderBrush="{DynamicResource BorderBrush}" Background="{DynamicResource SecondaryRegionBrush}" CornerRadius="0,0,4,4">
                     <CheckBox Content="确认现场情况" HorizontalAlignment="Left"/>
                 </Border>
@@ -71,13 +71,13 @@
                 <Border Height="100" BorderThickness="1,0,1,1" BorderBrush="{DynamicResource BorderBrush}" Background="{DynamicResource SecondaryRegionBrush}" CornerRadius="0,0,4,4">
                     <CheckBox Content="发布PIDS信息" HorizontalAlignment="Left"/>
                     -->
-            <!--<CheckBox Content="通报公交集团机场控制中心" HorizontalAlignment="Left"/>
+        <!--<CheckBox Content="通报公交集团机场控制中心" HorizontalAlignment="Left"/>
                     <CheckBox Content="通报公交总队" HorizontalAlignment="Left"/>
                     <CheckBox Content="预案开始" HorizontalAlignment="Left"/>-->
-            <!--
+        <!--
                 </Border>
             </Expander>-->
-        </ItemsControl>
+        <!--</ItemsControl>-->
 
         <!--<ListBox Grid.Row="0"  hj:BackgroundSwitchElement.ItemSelectedBackground="#FF139ABE" hj:BackgroundSwitchElement.MouseHoverBackground="#FF139ABE"  SelectionMode="Single" ItemsSource="{Binding titlelistbox}" Foreground="Black" FontSize="20" hj:ListBoxAttach.ListBoxItemWith="200"  hj:TitleElement.Title="预警事件类型：" Style="{StaticResource TitleListStyle}" Margin="0,10,0.333,65"/>-->
         <!--<hj:SearchBar Background="Black" Foreground="White" Margin="412,65,353.333,114.667" hj:InfoElement.Placeholder="123" BorderBrush="#33FFFF" hj:BorderElement.Geometry="{StaticResource Rect2}"  RenderTransformOrigin="3.318,1.667" />-->
@@ -109,10 +109,10 @@
 
 
 
-        <DataGrid HeadersVisibility="All"  hj:DataGridAttach.ShowRowNumber="True" Grid.Row="1" ColumnHeaderHeight="20" RowHeaderWidth="60" AutoGenerateColumns="False" ItemsSource="{Binding DataList}">
+        <DataGrid HeadersVisibility="All"  hj:DataGridAttach.ShowRowNumber="True" Grid.Row="1" ColumnHeaderHeight="20" RowHeaderWidth="60" AutoGenerateColumns="False" ItemsSource="{Binding DataList}" Margin="0,4,0.333,-0.333">
             <DataGrid.RowHeaderTemplate>
                 <DataTemplate>
-                    <CheckBox IsChecked="{Binding IsSelected,RelativeSource={RelativeSource AncestorType=DataGridRow}}"/>
+                    <CheckBox IsChecked="{Binding IsSelected, RelativeSource={RelativeSource AncestorType={x:Type DataGridRow}}}"/>
                 </DataTemplate>
             </DataGrid.RowHeaderTemplate>
             <DataGrid.Columns>
@@ -124,7 +124,7 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
-                                <Button x:Name="button1" Content="编辑" Tag="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=DataGrid}, Path=SelectedItem}" Click="button1_Click"/>
+                                <Button x:Name="button1" Content="编辑" Tag="{Binding SelectedItem, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}, Mode=FindAncestor}}" Click="button1_Click"/>
                                 <Button x:Name="button2" Content="预警处置"/>
                                 <Button x:Name="button3" Content="上报"/>
                             </StackPanel>
@@ -133,6 +133,13 @@
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
+        <!--<Calendar/>-->
+        <!--<hj:ListClock Margin="689,42,71.333,14"/>-->
+        <!--<hj:CalendarWithClock Margin="0,0,0.333,1"/>-->
+        <hj:TextBox hj:TitleElement.Title="事件详情"  Text="1234" IsReadOnly="True" hj:BorderElement.Geometry="{StaticResource Rect2}"  Style="{StaticResource TextBoxExtend}" Margin="595,109,167.333,261" />
+
+        
+
         <!--<Grid Grid.Row="0">
             <Grid.RowDefinitions>
                 <RowDefinition x:Name="row1" Height="*"/>
