--- a/src/Hjmos.BaseControls/Themes/Styles/Base/TextBoxBaseStyle.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/Base/TextBoxBaseStyle.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:controls="clr-namespace:Hjmos.BaseControls.Controls"
+                    xmlns:system="clr-namespace:System;assembly=mscorlib"
                     xmlns:interactivity="clr-namespace:Hjmos.BaseControls.Interactivity">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="../../Basic/Geometries.xaml"/>
@@ -68,6 +69,155 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+    <ControlTemplate x:Key="TextBoxExtendTopTemplate" TargetType="TextBox">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="{Binding Path=(controls:InfoElement.ContentHeight), RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource Double2GridLengthConverter}}" MinHeight="{Binding Path=(controls:InfoElement.MinContentHeight), RelativeSource={RelativeSource TemplatedParent}}" />
+            </Grid.RowDefinitions>
+            <StackPanel
+                Margin="{TemplateBinding Padding}"
+                Orientation="Horizontal"
+                Visibility="{Binding Path=(controls:InfoElement.Title), RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource String2VisibilityConverter}}">
+                <TextBlock Margin="1,0,0,0" Text="{Binding Path=(controls:InfoElement.Title), RelativeSource={RelativeSource TemplatedParent}}" />
+                <ContentPresenter
+                    Margin="4,0,0,0"
+                    Content="{Binding Path=(controls:InfoElement.Symbol), RelativeSource={RelativeSource TemplatedParent}}"
+                    TextElement.Foreground="{DynamicResource DangerBrush}"
+                    Visibility="{Binding Path=(controls:InfoElement.Necessary), RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource Boolean2VisibilityConverter}}" />
+            </StackPanel>
+            <Border
+                x:Name="border"
+                Grid.Row="1"
+                Background="{TemplateBinding Background}"
+                BorderBrush="{TemplateBinding BorderBrush}"
+                BorderThickness="{TemplateBinding BorderThickness}"
+                CornerRadius="{Binding Path=(controls:BorderElement.CornerRadius), RelativeSource={RelativeSource TemplatedParent}}"
+                SnapsToDevicePixels="True" />
+            <TextBlock
+                x:Name="Placeholder"
+                Grid.Row="1"
+                Margin="{TemplateBinding Padding}"
+                Padding="1"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                Style="{StaticResource TextBlockDefaultThiLight}"
+                Text="{Binding Path=(controls:InfoElement.Placeholder), RelativeSource={RelativeSource TemplatedParent}}"
+                Visibility="{TemplateBinding Text,
+                                             Converter={StaticResource String2VisibilityReConverter}}" />
+            <ScrollViewer
+                x:Name="PART_ContentHost"
+                Grid.Row="1"
+                Margin="-1,1"
+                Padding="{TemplateBinding Padding}"
+                VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+                Focusable="false"
+                HorizontalScrollBarVisibility="Hidden"
+                VerticalScrollBarVisibility="Hidden" />
+            <Path x:Name="PathBorder" Fill="Transparent" Grid.Row="1" Stroke="{TemplateBinding BorderBrush}"  SnapsToDevicePixels="True" Stretch="Fill"  Data="{TemplateBinding controls:BorderElement.Geometry}"/>
+        </Grid>
+        <ControlTemplate.Triggers>
+            <Trigger Property="IsEnabled" Value="false">
+                <Setter TargetName="border" Property="Opacity" Value="0.4" />
+                <Setter TargetName="PART_ContentHost" Property="Opacity" Value="0.4" />
+                <Setter TargetName="Placeholder" Property="Opacity" Value="0.4" />
+            </Trigger>
+            <Trigger SourceName="PART_ContentHost" Property="IsMouseOver" Value="true">
+                <Setter TargetName="border" Property="BorderBrush" Value="{DynamicResource SecondaryBorderBrush}" />
+            </Trigger>
+            <Trigger Property="IsFocused" Value="true">
+                <Setter TargetName="border" Property="BorderBrush" Value="{DynamicResource PrimaryBrush}" />
+            </Trigger>
+            <Trigger Property="controls:BorderElement.Geometry" Value="{x:Null}">
+                <Setter Property="Visibility" Value="Collapsed" TargetName="PathBorder"/>
+                <Setter Property="BorderThickness" Value="1"/>
+            </Trigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
+
+    <ControlTemplate x:Key="TextBoxExtendLeftTemplate" TargetType="TextBox">
+        <Grid Height="{Binding Path=(controls:InfoElement.ContentHeight), RelativeSource={RelativeSource TemplatedParent}}" MinHeight="{Binding Path=(controls:InfoElement.MinContentHeight), RelativeSource={RelativeSource TemplatedParent}}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="{Binding Path=(controls:InfoElement.TitleWidth), RelativeSource={RelativeSource TemplatedParent}}" />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <StackPanel
+                Margin="0,7,6,7"
+                VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                Orientation="Horizontal"
+                Visibility="{Binding Path=(controls:InfoElement.Title), RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource String2VisibilityConverter}}">
+                <TextBlock Text="{Binding Path=(controls:InfoElement.Title), RelativeSource={RelativeSource TemplatedParent}}" />
+                <ContentPresenter
+                    Margin="4,0,0,0"
+                    Content="{Binding Path=(controls:InfoElement.Symbol), RelativeSource={RelativeSource TemplatedParent}}"
+                    TextElement.Foreground="{DynamicResource DangerBrush}"
+                    Visibility="{Binding Path=(controls:InfoElement.Necessary), RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource Boolean2VisibilityConverter}}" />
+            </StackPanel>
+            <Border
+                x:Name="border"
+                Grid.Column="1"
+                Background="{TemplateBinding Background}"
+                BorderBrush="{TemplateBinding BorderBrush}"
+                BorderThickness="{TemplateBinding BorderThickness}"
+                CornerRadius="{Binding Path=(controls:BorderElement.CornerRadius), RelativeSource={RelativeSource TemplatedParent}}"
+                SnapsToDevicePixels="True" />
+            <TextBlock
+                x:Name="Placeholder"
+                Grid.Column="1"
+                Margin="{TemplateBinding Padding}"
+                Padding="1"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                Style="{StaticResource TextBlockDefaultThiLight}"
+                Text="{Binding Path=(controls:InfoElement.Placeholder), RelativeSource={RelativeSource TemplatedParent}}"
+                Visibility="{TemplateBinding Text,
+                                             Converter={StaticResource String2VisibilityReConverter}}" />
+            <ScrollViewer
+                x:Name="PART_ContentHost"
+                Grid.Column="1"
+                Margin="-1,1"
+                Padding="{TemplateBinding Padding}"
+                Focusable="false"
+                HorizontalScrollBarVisibility="Hidden"
+                VerticalScrollBarVisibility="Hidden" />
+            <Path x:Name="PathBorder" Fill="Transparent" Grid.Row="1" Stroke="{TemplateBinding BorderBrush}"  SnapsToDevicePixels="True" Stretch="Fill"  Data="{TemplateBinding controls:BorderElement.Geometry}"/>
+        </Grid>
+        <ControlTemplate.Triggers>
+            <Trigger Property="IsEnabled" Value="false">
+                <Setter TargetName="border" Property="Opacity" Value="0.4" />
+                <Setter TargetName="PART_ContentHost" Property="Opacity" Value="0.4" />
+                <Setter TargetName="Placeholder" Property="Opacity" Value="0.4" />
+            </Trigger>
+            <Trigger SourceName="PART_ContentHost" Property="IsMouseOver" Value="true">
+                <Setter TargetName="border" Property="BorderBrush" Value="{DynamicResource SecondaryBorderBrush}" />
+            </Trigger>
+            <Trigger Property="IsFocused" Value="true">
+                <Setter TargetName="border" Property="BorderBrush" Value="{DynamicResource PrimaryBrush}" />
+            </Trigger>
+            <Trigger Property="controls:BorderElement.Geometry" Value="{x:Null}">
+                <Setter Property="Visibility" Value="Collapsed" TargetName="PathBorder"/>
+                <Setter Property="BorderThickness" Value="1"/>
+            </Trigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
+
+    <Style x:Key="TextBoxExtendBaseStyle" BasedOn="{StaticResource TextBoxBaseStyle}" TargetType="TextBox">
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="controls:InfoElement.Symbol" Value="●" />
+        <Setter Property="controls:InfoElement.ContentHeight" Value="{x:Static system:Double.NaN}" />
+        <Setter Property="controls:InfoElement.MinContentHeight" Value="30" />
+        <Setter Property="Height" Value="Auto" />
+        <Setter Property="Template" Value="{StaticResource TextBoxExtendTopTemplate}" />
+        <Style.Triggers>
+            <Trigger Property="controls:InfoElement.TitleAlignment" Value="Left">
+                <Setter Property="Template" Value="{StaticResource TextBoxExtendLeftTemplate}"/>
+                <Setter Property="Width" Value="Auto"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+
 
     <Style TargetType="controls:TextBox" BasedOn="{StaticResource TextBoxBaseStyle}" x:Key="TextBoxPlusIcon">
         <Setter Property="Template">
