--- a/src/Hjmos.BaseControls/Themes/Styles/ComboBox.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/ComboBox.xaml
@@ -1,10 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:Hjmos.BaseControls.Themes.Styles">
+                    xmlns:hc="clr-namespace:Hjmos.BaseControls.Controls">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Base/ComboBoxBaseStyle.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
-
+    <Style x:Key="ComboBoxMemoStyle"  BasedOn="{StaticResource ComboBoxMemoBaseStyle}" TargetType="hc:MemoBox" />
+    <Style x:Key="ComboBoxMemoExtentStyle"  BasedOn="{StaticResource ComboBoxMemoExtentBaseStyle}" TargetType="hc:MemoBox" />
     <Style BasedOn="{StaticResource ComboBoxBaseStyle}" TargetType="ComboBox"/>
 </ResourceDictionary>
